manifests/argo-projects/argo-events.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-events
# ---
# apiVersion: external-secrets.io/v1beta1
# kind: ExternalSecret
# metadata:
#   name: sso
#   namespace: argo-workflows
#   labels:
#     app.kubernetes.io/part-of: argocd
# spec:
#   refreshInterval: "5m"
#   secretStoreRef:
#     kind: ClusterSecretStore
#     name: 1password
#   target:
#     creationPolicy: Owner
#   data:
#     - secretKey: token
#       remoteRef:
#         key: sso
#         property: workflows
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: workflows-cert
# spec:
#   commonName: workflows.<path:stringreplacesecret#domain>
#   secretName: workflows-cert
#   dnsNames:
#     - workflows.<path:stringreplacesecret#domain>
#   issuerRef:
#     name: letsencrypt-production
#     kind: ClusterIssuer
